2005-11-10  Mark Wielaard  <mark@klomp.org>

	Reported by Petteri <betelgeuse@gentoo.org> bug #24768 and bug #24769.
	* configure.ac (dssi): Change accidental alsa reference to dssi.
	* native/jni/midi-dssi/Makefile.am (libgjsmdssi_la_SOURCES): Add
	dssi_data.h.

2005-11-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/OrbFunctional.java (use_properties, set_parameters):
	Rewritten to support orb and server ids.
	* org/omg/CORBA/ORB.java,
	org/omg/PortableInterceptor/ObjectReferenceTemplate.java: 
	Documentation update.

2005-11-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JComponent.java:
	(addNotify): Unregister all WHEN_IN_FOCUSED_WINDOW bindings for this 
	JComponent and then register them with its (potentially) new top level
	ancestor.  Removed unncessary code that copied regular (WHEN_FOCUSED)
	key bindings up the parent hierarchy.  

2005-10-26  Roman Kennke  <kennke@aicas.com>

	Reported by Friedjof Siebert  <siebert@aicas.com>
	* java/util/WeakHashMap.java
	(WeakEntrySet.Iterator.checkMod): Improved exception message.
	(internalRemove): Removed redundant reads of buckets[slot] and
	prev.next and added checks to ensure that no null pointer
	exception may occur and that this can be proved automatically.

2005-11-09  Roman Kennke  <kennke@aicas.com>

	Reported by Friedjof Siebert  <siebert@aicas.com>
	* java/io/PrintWriter.java
	(line_separator):  Added default value for property to ensure
	absence of null pointer exception even if property is not set.

2005-11-09  Roman Kennke  <kennke@aicas.com>

	Reported by Ingo Proetel  <proetel@aicas.com>
	* gnu/java/io/PlatformHelper.java
	(toCanonicalForm): Remove lowercasing of paths in Windows. This
	breaks working with URLs, like when accessing files withing JAR
	files.

2005-11-09  Roman Kennke  <kennke@aicas.com>

	* java/io/InputStreamReader.java
	(InputStreamReader(InputStream, CharsetDecoder)): Catch the case
	when the CharsetDecoder returns a null charset and handle it like