@@ -1,3 +1,10 @@
+2005-10-10  Roman Kennke  <kennke@aicas.com>
+
+	* javax/swing/JComponent.java
+	(paintingTile): New field.
+	(isPaintingTile): Implemented.
+	(paintChildren): Optimized painting of overlapping children.
+
 2005-11-10  Mark Wielaard  <mark@klomp.org>
 
 	Reported by Petteri <betelgeuse@gentoo.org> bug #24768 and bug #24769.
@@ -21,7 +28,7 @@
 	ancestor.  Removed unncessary code that copied regular (WHEN_FOCUSED)
 	key bindings up the parent hierarchy.  
 
-2005-10-26  Roman Kennke  <kennke@aicas.com>
+2005-10-09  Roman Kennke  <kennke@aicas.com>
 
 	Reported by Friedjof Siebert  <siebert@aicas.com>
 	* java/util/WeakHashMap.java
